# PhoneBook

./: .gitignore  CMakeLists.txt  README.md
db/: build_db.py  phonebook.sqlite  records.txt
src/app/: CMakeLists.txt  app.pro  app.pro.files  editform.cpp  editform.h  editform.ui  insertform.cpp  insertform.h  insertform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: CMakeLists.txt  contact.cpp  contact.hpp  contact_builder.cpp  contact_builder.hpp  pb_operations.cpp  pb_operations.hpp
